* BUG #7587 Fix the encoder / decoder for the persistant context wizards

Version 1.14 - 2017-11-09
* OTH#0000 No need to decode empty dict values in version_getter
* FEA#7001 Add the number of succeeded jobs in the generated batch log
* FEA#7218 Improve documentation delivery and content
* BUG#7356 Export Link with event type when exporting event type action
* FEA#2751 Add the following access rights groups: Coog Financial Consultation, Coog Financial Management, Coog Claim Consultation, Coog Claim Management, Coog Commission Consultation, Coog Commission Management, Coog Contract Consultation, Coog Contract Management, Coog Party Consultation, Coog Party Management, Coog Task Consultation, Coog Task Management, Coog Product Consultation, Coog Product Management, Coog Contract Underwriting, Coog Claim Underwriting and Coog Global Configuration. These groups allow to create functional users with a set of non exhaustive access rights.
* BUG#7283 Fix duplication of object with a unicity constraint
* BUG#7168 Add a pyson key to detect that a batch is running
* FEA#6232 Clean up batch and chain log output
* BUG#7026 Freeze dependencies and remove attribute "_config" from base batches model
* OTH#0000 Add clear / has error methods on error manager
* FEA#7076 Add general configuration entrypoint
* FEA#6377 Move initialisation of global search and translatable languages from test case to a wizard
* FEA#7015 Add a technical function to set a readonly condition on all fields of a model
* BUG#6993 Removing simple json import
* BUG#6475 The third parameter of coog-daily is now an optional argument which represents TODAY_DATE.
* FEA#6936 Add a batch parameter to avoid systematic split
* FEA#6236 Add a new command to reexec a batch (replay failed jobs without split)
* FEA#6696 Add a filtering rule on event type actions
* OTH#0000 Add inheritance to dynamically support readonly transaction using ServerContext
* BUG#6786 Limit global search query result size