@@ -1,3 +1,4 @@
+* OTH#0000 Ne jamais crasher en cas d'absence d'une traduction à l'affichage
 * BUG#7587 Correctif des encodeur / décodeur du contexte persistant pour les assistants
 
 Version 1.14 - 2017-11-09
